test/docs-doctest/fixtures/tutorial-nonexhaustive.stderr
fixtures/tutorial-nonexhaustive.jac:1:17-18: error[E0813]: This match is not exhaustive
  Cause: this match is not exhaustive: it misses false
  Next step: Add a clause matching the witness or a wildcard default.
